# topmenu-gtk

./: .gitignore  Makefile.am  README  README.md  config.h.in  configure.ac  global.h
icons/: Makefile.am
libtopmenu-client/: Makefile.am  topmenu-appmenubar.c  topmenu-appmenubar.h  topmenu-client.c  topmenu-client.h  topmenu-menubar-proxy.h  topmenu-monitor.c  topmenu-monitor.h
libtopmenu-server/: Makefile.am  topmenu-server.c  topmenu-server.h  topmenu-widget.c  topmenu-widget.h
lxpanel-plugin/: Makefile.am  topmenu-lxpanel-plugin.c
mate-applet/: Makefile.am  com.javispedro.topmenu.MatePanelApplet.mate-panel-applet.in  main.c  org.mate.panel.applet.TopMenuMatePanelAppletFactory.service.in  topmenu-mate-panel-applet.c  topmenu-mate-panel-applet.h
module/: Makefile.am  appmenu.c  appmenu.h  data.c  data.h  gtk3privates.h  main.c  menuitem-proxy.c  menuitem-proxy.h
test/: Makefile.am  client.c  server.c
xfce-applet/: Makefile.am  topmenu-xfce-panel-applet.c  topmenu-xfce-panel-applet.h  topmenu.desktop.in
